manifests/1-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: mcu-game
  labels:
     name: mcu-game
