manifests/deployment.yml
apiVersion: v1
kind: Service
metadata:
  namespace: mcu-game
  name: app
spec:
  ports:
    - name: "app"
      port: 80
      targetPort: 80
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mcu-game
  labels:
    app: app
  name: app
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        build_number: $BUILD_NUMBER
        app: app
    spec:
      containers:
        - image: registry.easlab.co.uk/ethan/mcu-game:latest
          name: app
          imagePullPolicy: Always
          resources: {}
          stdin: true
          tty: true
      restartPolicy: Always
      imagePullSecrets:
        - name: registry
