manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.provider: nginx
  name: app
  namespace: $NAMESPACE
spec:
  rules:
  - host: mcu-game.easlab.co.uk
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 80
  tls:
  - hosts:
    - mcu-game.easlab.co.uk
    secretName: mcu-tls-cert
